--- a/my-suitcase/src/index.html
+++ b/my-suitcase/src/index.html
@@ -5,10 +5,11 @@
   <title>MySuitcase</title>
   <base href="/">
 
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="img/favicon.png">
 </head>
-<body>
+<body class="bg-shape">
   <app-root></app-root>
 </body>
 </html>
