--- a/my-suitcase/src/index.html
+++ b/my-suitcase/src/index.html
@@ -7,7 +7,7 @@
 
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/png" href="img/favicon.png">
+  <link rel="icon" type="image/png" href="assets/img/favicon.png">
 </head>
 <body class="bg-shape">
   <app-root></app-root>
