--- a/my-suitcase/src/index.html
+++ b/my-suitcase/src/index.html
@@ -7,9 +7,11 @@
 
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/png" href="assets/img/favicon.png">
+  <link rel="icon" type="image/png" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body class="bg-shape">
+<body class="bg-shape mat-typography">
   <app-root></app-root>
 </body>
 </html>
