--- a/client/src/index.html
+++ b/client/src/index.html
@@ -18,6 +18,7 @@
   <link rel="icon" type="image/png" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDSR6NTAYFIgtqSBc37HDAvBEulaHHgh4M&libraries=places" type="text/javascript" defer></script>
 </head>
 <body class="bg-shape mat-typography">
   <app-root></app-root>
