installer button for pwa

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -12,6 +12,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="favicon.ico">
+  <link rel="manifest" href="./manifest.webmanifest">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&amp;display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDSR6NTAYFIgtqSBc37HDAvBEulaHHgh4M&amp;libraries=places" type="text/javascript" defer=""></script>
