fix problem to load script of pwa according to the language path

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
       console.log('Google Maps is loaded');
     }
   </script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDSR6NTAYFIgtqSBc37HDAvBEulaHHgh4M&amp;libraries=places&callback=mapsCallback" type="text/javascript" defer=""></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDSR6NTAYFIgtqSBc37HDAvBEulaHHgh4M&amp;libraries=places&amp;callback=mapsCallback" type="text/javascript" defer=""></script>
   
 <body class="bg-shape mat-typography">
   <app-root></app-root>
