--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,9 @@
   </script>
   <!-- End Google Tag Manager -->
 
-  <link rel="alternate" hreflang="en-US" href="https://mysuitcase.net/en-US/#/"/>
-  <link rel="alternate" hreflang="es-ES" href="https://mysuitcase.net/es-ES/#/"/>
-  <link rel="alternate" hreflang="fr-FR" href="https://mysuitcase.net/fr-FR/#/"/>
+  <link rel="alternate" hreflang="en-US" href="https://mysuitcase.net/en-US/"/>
+  <link rel="alternate" hreflang="es-ES" href="https://mysuitcase.net/es-ES/"/>
+  <link rel="alternate" hreflang="fr-FR" href="https://mysuitcase.net/fr-FR/"/>
   
   <link rel="icon" type="image/png" href="favicon.ico">
   <!-- manifest needed for PWA -->
